k8s/backend/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: green
  labels:
    app: oracle-smart-backend
spec:
  type: ClusterIP
  selector:
    app: oracle-smart-backend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
